--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Journal</title>
-  <!-- <link rel="icon" href="/favicon.ico"> -->
-  <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-  <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF"> -->
-  <!-- <meta name="theme-color" content="#ffffff"> -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+  <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF"> 
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
