--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
   <meta name="theme-color" content="#e1eceb">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <script>
     if (!window.matchMedia('(display-mode: standalone)').matches) {
       // Running in browser (not as a PWA), allow zooming
